add upload unit tests for dummy module,
TODO: implement filesystem version properly.
